# multicam_pointcloud

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: luxonis_oak_d_camera_config_gh5.yaml  luxonis_oak_d_lite_camera_config.yaml  mcpc_system_config.yaml  rs_405_camera_config.yaml
includes/: realsense_multicam_node.hpp
includes/multicam_pointcloud/: info.txt  realsense_multicam_node.hpp  toggle_client_test.hpp
launch/: data_collector.launch.py  full_multicam.launch.py  headless_multicam.launch.py  multicam.launch.py  no_farmbot.launch.py  normal_multicam.launch.py  standard_multicam.launch.py
multicam_pointcloud/: autonomous.py  cam_subscriber.py  data_collector.py  data_manager.py  luxonis_multicam.py  mcpc_controller.py  runner.py
scripts/: data_collection_node.py  luxonis_multicam_node.py  luxonis_multicam_subscriber_test.py  mcpc_node.py  node.py  verify_sequence.py
src/: example_cpp_node.cpp  realsense_multicam_node.cpp  toggle_client_test.cpp
