<?xml version="1.0"?>
<package format="3">
  <name>multicam_pointcloud</name>
  <version>0.0.1</version>
  <description>Package for capturing and processing multi-camera RealSense data in ROS2.</description>
  <maintainer email="jamespetri28@gmail.com">James Petri</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>realsense2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
